feat: create html and css code

--- a/index.html
+++ b/index.html
@@ -5,5 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Awesome books</h1>
+      <div class="book">
+        <p>Lorem Ipsum</p>
+        <p>Testeroo Testyy</p>
+        <button>Remove</button>
+      </div>
+      <form class="form">
+        <input type="text" name="Title" placeholder="Title" class="title" required/>
+        <input type="text" name="Author" placeholder="Author" class="author" required/>
+        <button type="submit" class="form-button">Add</button>
+      </form>
+
+    </div>
+  </body>
 </html>
