feat: update add and delete feature and working perfectly

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="book">
           <p>Lorem Ipsum</p>
           <p>Testeroo Testyy</p>
-          <button class="remove-button">Remove</button>
+          <button id="gfh" class="remove-button">Remove</button>
         </div>
       </div>
 
