--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <body>
     <div class="container">
       <h1>Awesome books</h1>
-      <div class="book-container">
-      </div>
+      <div class="book-container"></div>
 
       <form class="form">
-        <input type="text" name="Title" placeholder="Title" class="title" required/>
-        <input type="text" name="Author" placeholder="Author" class="author" required/>
+        <input type="text" name="Title" placeholder="Title" class="title" required />
+        <input type="text" name="Author" placeholder="Author" class="author" required />
         <button type="submit" class="form-button">Add</button>
       </form>
     </div>
