feat: format the code using prettier and linter

--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
       <table>
         <thead>
           <tr id="table-header">
-              <th>S/N</th>
-              <th>Author</th>
-              <th>Title</th>
-              <th></th>
+            <th>S/N</th>
+            <th>Author</th>
+            <th>Title</th>
+            <th></th>
           </tr>
         </thead>
-        <tbody class="book-container">
-        </tbody>
+        <tbody class="book-container"></tbody>
       </table>
       <form class="form">
-        <input type="text" name="Title" placeholder="Title" class="title" required />
-        <input type="text" name="Author" placeholder="Author" class="author" required />
+        <input type="text" name="title" placeholder="Title" class="title" required />
+        <input type="text" name="author" placeholder="Author" class="author" required />
         <button type="submit" class="form-button">Add</button>
       </form>
     </div>
