feat: combine the files in a single file called 'src'

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <header class="header">
+        
+      </header>
       <h1>Awesome books</h1>
       <table>
         <thead>
