feat: synchronize the page and each button is now working

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <!-- <header class="header">
         <nav>
           <a id="logo"
                 href="#home"
@@ -17,7 +17,7 @@
               >
               Awesome Books
           </a>
-          <ul>
+          <ul class="nav-container">
             <li>
               <a
                 href="#book-list"
@@ -50,7 +50,7 @@
       </header>
 
       <main>
-        <table>
+        <table class="table">
           <thead>
             <tr id="table-header">
               <th>Author</th>
@@ -85,7 +85,7 @@
 
       <footer>
         <h3>Copyright</h2>
-      </footer>
+      </footer> -->
     </div>
     <script type="module" src="./js/index.js"></script>
   </body>
