--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Project</title>
-    <link rel="stylesheet" href="./css/index.css" />
+    <!-- <link rel="stylesheet" href="../src/css/index.css" /> -->
   </head>
   <body>
     <div class="container">
@@ -87,6 +87,6 @@
         <h3>Copyright</h2>
       </footer> -->
     </div>
-    <script type="module" src="./js/index.js"></script>
+    <!-- <script type="module" ></script> -->
   </body>
 </html>
